[package]
name = "linq-db"
version = "0.1.0"
authors = ["thomas <thomas.chiantia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
lazy_static = "1.4"
thiserror = "1.0"
futures = "0.3"
