[package]
name = "linq-io"
version = "0.1.0"
authors = ["thomas <thomas.chiantia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
linq-sys = { path = "../linq-sys" }
linq-util = { path = "../linq-util" }
linq-db = { path = "../linq-db" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
log = "0.4"
