[package]
name = "linq-view"
version = "0.1.0"
authors = ["thomas <thomas.chiantia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linq-io = { path = "../linq-io" }
linq-util = { path = "../linq-util" }
thiserror = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
webview_official = { version = "0.2" }
