[package]
name = "scan"
version = "0.1.0"
authors = ["thomas <thomas.chiantia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linq = { path = "../../linq" }
log = "0.4"
slog = "2.0"
slog-async = "2.0"
slog-term = "2.0"
slog-stdlog = "4.0"
slog-scope = "4.0"
futures = "0.3"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
